# petpallete

./: .gitignore  pyproject.toml  train-autoencoder.py
notebooks/: caption.ipynb  dino-train.ipynb  dino_attention.ipynb  encode.ipynb  resize.ipynb  upscale.ipynb
src/: __init__.py
src/dm/: __init__.py  afhq.py
src/models/: __init__.py  autoencoder.py
src/trainer/: __init__.py
