[project]
name = "petpallete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lightning>=2.4.0",
    "lpips>=0.1.4",
    "matplotlib>=3.9.2",
    "timm>=1.0.9",
    "torch>=2.4.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.19.1",
    "tqdm>=4.66.5",
    "transformers>=4.45.1",
    "wandb>=0.18.3",
]
